# rsd_ape_team_ws

./: .gitignore  README.md  client.py  color_seg.cpp  mes_client.py
color_seg/: CMakeLists.txt  README.md  color_seg.cpp  main.cpp  main.py  rpi_main.py
modbus/: README.md  custom_message.py  pymodbus_client.py  pymodbus_server.py
src/our_ur/: CMakeLists.txt  package.xml
src/our_ur/action/: Robot.action
src/our_ur/launch/: our_ur.launch  ur_cell_real.launch  ur_cell_simulation.launch
src/our_ur/msg/: StateMsg.msg
src/our_ur/scripts/: MIR_REST_client.py  RSD_GUI.py  RSD_GUI.ui  light_control.py  mes_client.py  packml.py  packml_node.py  packml_states.py  pymodbus_client.py  rsd_2019_app_public.py
src/our_ur/src/: move_stuff.cpp  ur_go_to_pose_service.cpp
src/universal_robot/ur_kinematics/include/ur_kinematics/: ur_moveit_plugin.h
src/ur_modern_driver/launch/: ur5e_bringup_joint_limited.launch  ur_common.launch
ur_server_ws/paths/: 0.txt  2.txt  20.txt  example.txt  movetobrick_general.txt  movetobrick_red.txt  textfile.txt
ur_server_ws/src/ur_server/: CMakeLists.txt  package.xml
ur_server_ws/src/ur_server/action/: ur.action
ur_server_ws/src/ur_server/src/: rsd_server_short.cpp  ur_client.cpp  ur_server.cpp  ur_server_backup11_11.cpp  ur_server_backup2.cpp  ur_server_new_notworking.cpp  ur_server_safe.cpp
